# bugworld-esp32

./: .gitignore  CMakeLists.txt  PROMPT.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/Jet/: CMakeLists.txt  README.md
components/Jet/src/: FastMath.hpp  LensFlare.hpp  ParticleSystem.hpp  Renderer.cpp  Scene.cpp
main/: CMakeLists.txt  JetConfig.hpp  config.h  idf_component.yml  main.cpp
main/audio/: audio.cpp  audio.h
main/drivers/: audio_hw.cpp  audio_hw.h  display.cpp  display.h  input.cpp  input.h
main/game/: cutscene.cpp  cutscene.h  effects.cpp  effects.h  enemies.cpp  enemies.h  game.cpp  game.h  generators.cpp  generators.h  levels.cpp  levels.h  projectiles.cpp  projectiles.h  save.cpp  save.h  turret.cpp  turret.h
main/ui/: hud.cpp  hud.h  menus.cpp  menus.h  touch_controls.cpp  touch_controls.h
