idf_component_register(
    SRCS
        "main.cpp"
        "drivers/display.cpp"
        "drivers/input.cpp"
        "drivers/audio_hw.cpp"
        "audio/audio.cpp"
        "game/game.cpp"
        "game/turret.cpp"
        "game/enemies.cpp"
        "game/generators.cpp"
        "game/projectiles.cpp"
        "game/effects.cpp"
        "game/levels.cpp"
        "game/cutscene.cpp"
        "game/save.cpp"
        "ui/hud.cpp"
        "ui/menus.cpp"
        "ui/touch_controls.cpp"
    INCLUDE_DIRS
        "."
        "drivers"
        "audio"
        "game"
        "ui"
    REQUIRES
        driver
        esp_driver_spi
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_i2s
        esp_driver_ledc
        nvs_flash
        esp_timer
        esp_psram
        esp_lcd
        esp_lcd_touch
        spiffs
        vfs
        Jet
)
